# barka

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  TODO.md  build.rs  depot.json  docker-compose.yml
.claude/: settings.local.json
.claude/commands/: commit-push-pr-ci.md
.cursor/: Dockerfile  Dockerfile.cursor-cloud-agent  environment.json
.cursor/rules/: project-context.mdc  read-agents-md.mdc
.cursor/skills/commit-push-pr-ci/: SKILL.md
.github/workflows/: ci.yml  claude.yml  jepsen.yml
jepsen/barka/: project.clj
jepsen/barka/src/jepsen/barka/: client.clj  core.clj  db.clj  nemesis.clj
jepsen/barka/store/: current  latest
jepsen/barka/store/barka/: latest
jepsen/barka/store/barka/20260321T030511.783-0400/: history.edn  history.txt  results.edn  test.jepsen  timeline.html
jepsen/barka/store/barka/20260321T030558.148-0400/: history.edn  history.txt  results.edn  test.jepsen  timeline.html
schema/: barka.capnp
scripts/: ensure-localstack.sh  gh-pr-review-comments.sh  gh-pr-review-threads.sh  loadtest.sh  multi-node.sh
src/: consume_node.rs  consumer.rs  error.rs  jepsen_gateway.rs  leader_election.rs  lease.rs  lib.rs  log_offset.rs  main.rs  node.rs  partition_registry.rs  produce_node.rs  produce_router.rs  producer.rs  rebalancer.rs  s3.rs  segment.rs  storage.rs  test_util.rs  tracing_init.rs
src/log/: mod.rs  partition.rs  record.rs
src/rpc/: bytes_transport.rs  client.rs  mod.rs  server.rs
tasks/: lessons.md  todo.md
