[package]
name = "barka"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
capnp = { version = "0.25", features = ["unaligned"] }
capnp-futures = "0.25"
capnp-rpc = "0.25"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
bytes = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
base64 = "0.22"
aws-sdk-s3 = "1"
aws-config = "1"
aws-smithy-types = { version = "1", features = ["http-body-0-4-x"] }
http-body = "0.4"
http = "0.2"
lru = "0.16"
rand = "0.9"

[build-dependencies]
capnpc = "0.25"
